Makes reports submittable, with newly added fields on CDC Report
Also adds some new fields to site
