# src/Hedwig/ClientApp/src/OAS-generated/apis/HedwigApi.ts
@@ -1,5 +1,5 @@
-// tslint:disable
-// eslint-disable
+/* tslint:disable */
+/* eslint-disable */
 /**
  * Hedwig API
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
@@ -73,6 +73,12 @@ export interface ApiOrganizationsOrgIdReportsIdGetRequest {
     id: number;
     orgId: number;
     include?: Array<string>;
+}
+
+export interface ApiOrganizationsOrgIdReportsIdPutRequest {
+    id: number;
+    orgId: number;
+    cdcReport?: CdcReport;
 }
 
 export interface ApiOrganizationsOrgIdSitesGetRequest {
@@ -400,6 +406,45 @@ export class HedwigApi extends runtime.BaseAPI {
      */
     async apiOrganizationsOrgIdReportsIdGet(requestParameters: ApiOrganizationsOrgIdReportsIdGetRequest): Promise<CdcReport> {
         const response = await this.apiOrganizationsOrgIdReportsIdGetRaw(requestParameters);
+        return await response.value();
+    }
+
+    /**
+     */
+    async apiOrganizationsOrgIdReportsIdPutRaw(requestParameters: ApiOrganizationsOrgIdReportsIdPutRequest): Promise<runtime.ApiResponse<CdcReport>> {
+        if (requestParameters.id === null || requestParameters.id === undefined) {
+            throw new runtime.RequiredError('id','Required parameter requestParameters.id was null or undefined when calling apiOrganizationsOrgIdReportsIdPut.');
+        }
+
+        if (requestParameters.orgId === null || requestParameters.orgId === undefined) {
+            throw new runtime.RequiredError('orgId','Required parameter requestParameters.orgId was null or undefined when calling apiOrganizationsOrgIdReportsIdPut.');
+        }
+
+        const queryParameters: runtime.HTTPQuery = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        headerParameters['Content-Type'] = 'application/json-patch+json';
+
+        if (this.configuration && this.configuration.apiKey) {
+            headerParameters["Authorization"] = this.configuration.apiKey("Authorization"); // Bearer authentication
+        }
+
+        const response = await this.request({
+            path: `/api/organizations/{orgId}/Reports/{id}`.replace(`{${"id"}}`, encodeURIComponent(String(requestParameters.id))).replace(`{${"orgId"}}`, encodeURIComponent(String(requestParameters.orgId))),
+            method: 'PUT',
+            headers: headerParameters,
+            query: queryParameters,
+            body: CdcReportToJSON(requestParameters.cdcReport),
+        });
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => CdcReportFromJSON(jsonValue));
+    }
+
+    /**
+     */
+    async apiOrganizationsOrgIdReportsIdPut(requestParameters: ApiOrganizationsOrgIdReportsIdPutRequest): Promise<CdcReport> {
+        const response = await this.apiOrganizationsOrgIdReportsIdPutRaw(requestParameters);
         return await response.value();
     }
 
